--- a/rclone/Makefile
+++ b/rclone/Makefile
@@ -10,16 +10,16 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=rclone
-PKG_VERSION:=1.52.2
+PKG_VERSION:=1.66.0
 PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/rclone/rclone.git
 PKG_SOURCE_DATE:=2020-06-24
-PKG_SOURCE_VERSION:=d8144a7e84dc3fb4975adf1bce707a5be672fada
+PKG_SOURCE_VERSION:=f62e7b5b30be8357e53fe0134baafe25cf552238
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
-PKG_MIRROR_HASH:=8a6f3fd465e57f5f3b9cfe3958eeb020f72b4940bfbf4993b9580659041c3735
+PKG_MIRROR_HASH:=
 
 PKG_LICENSE:=GPLv3
 PKG_MAINTAINER:=ElonH <elonhhuang@gmail.com>
